--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -9,7 +9,10 @@
   <%= f.input :transmission %>
   <%= f.input :colour %>
   <%= f.input :availability %>
-  <%= f.input :address %>
+  <%= f.input :address,
+    input_html: {data: {address_autocomplete_target: "address"}},
+    wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+  %>
   <%= f.input :photo, as: :file %>
   <%= f.submit "Create now :D", class: "btn btn-primary" %>
 <% end %>
