--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -50,3 +50,10 @@
       </div>
     </div>
   </section>
+  <div data-controller="map"
+        id="map"
+        data-map-markers-value="<%= @markers.to_json %>"
+        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+        style="width: 100%; height: 600px;">
+
+  </div>
