--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container justify-content-center align-self-center ">
+<div class="container-fluid d-flex justify-content-center align-items-center flex-column">
   <div class="card" style="width: 30rem;">
      <img src="<%= image_url(@car_image) %>" class="card-img-top w-100" alt="...">
     <span class="btn btn-warning">  <%= link_to "Destroy the car",
@@ -23,20 +23,25 @@
       </ul>
   <hr>
   <p><strong>Reviews</strong></p>
+  <p><%= pluralize @car.reviews.size, "review" %></p>
   <ul class="list-group">
+  <% if @car.reviews.blank? %>
+    <p class="text-secondary">Be the first to leave a review for <%= @car.make %></p>
+  <% else %>
     <% @car.reviews.each do |review| %>
       <li class="list-group-item">
       <%= review.content %>,
       <%= link_to "Delete", review_path(review),
       data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
       </li>
+      <% end %>
     <% end %>
   </ul>
   <hr>
       <div><%= link_to "Book Now",  new_car_booking_path(@car), class: "btn btn-gradient" %></div>
-    </div>
+  </div>
     <%= link_to "Add Review", new_car_review_path(@car) %>
     <%= link_to "Back", cars_path %>
     <%= link_to "Edit", edit_car_path %>
     <%= link_to "Show all booking", car_bookings_path(@car) %>
-  </div>
+</div>
