--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,9 +1,9 @@
-<div class="container-fluid d-flex justify-content-center align-items-center flex-column">
+<div class="container-fluid d-flex justify-content-center align-items-center flex-column" data-controller="insert-in-list">
   <div class="card" style="width: 30rem;">
-     <img src="<%= image_url(@car_image) %>" class="card-img-top w-100" alt="...">
+     <img src="<%= image_url(@car_image) unless @car_image.blank? %>" class="card-img-top w-100" alt="...">
     <span class="btn btn-warning">  <%= link_to "Destroy the car",
     car_path(@car),data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></span>
-    <div class="card-body justify-content-center align-self-center">
+    <div class="card-body justify-content-center align-self-center" data-insert-in-list-target="items">
       <h5 class="card-title"><%= @car.model %></h5>
       <ul class="card-text">
         <li><%= @car.make %></li>
@@ -11,7 +11,7 @@
         <li><%= @car.category %></li>
         <li><%= @car.transmission %></li>
         <li><%= @car.description %></li>
-        <li><%= @car.price %></li>
+        <li><strong><%= @car.price %> AUD</strong></li>
       </ul>
       <hr>
       <p><strong>Booking confirm</strong></p>
@@ -30,18 +30,19 @@
   <% else %>
     <% @car.reviews.each do |review| %>
       <li class="list-group-item">
-      <%= review.content %>,
-      <%= link_to "Delete", review_path(review),
+      <%= render 'cars/review', review: review %>
+      <%= link_to "Delete", car_path(review),
       data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
-      </li>
       <% end %>
+      </li>
     <% end %>
   </ul>
+   </div>
+  <%= render 'reviews/form', car: @car, review: @review %>
   <hr>
       <div><%= link_to "Book Now",  new_car_booking_path(@car), class: "btn btn-gradient" %></div>
-  </div>
-    <%= link_to "Add Review", new_car_review_path(@car) %>
+
     <%= link_to "Back", cars_path %>
-    <%= link_to "Edit", edit_car_path %>
+    <%= link_to "Edit", edit_car_path(@car) %>
     <%= link_to "Show all booking", car_bookings_path(@car) %>
 </div>
